add: create project and functionality

--- a/package.json
+++ b/package.json
@@ -15,12 +15,16 @@
     "@types/react-dom": "18.2.7",
     "cloudinary": "^1.39.0",
     "eslint-config-next": "13.4.12",
+    "formik": "^2.4.2",
     "graphql-request": "^6.1.0",
     "jsonwebtoken": "^9.0.1",
     "next": "13.4.12",
     "next-auth": "^4.22.3",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-hot-toast": "^2.4.1",
+    "react-icons": "^4.10.1",
+    "yup": "^1.2.0"
   },
   "devDependencies": {
     "@grafbase/sdk": "^0.3.0",
