--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,7 +14,10 @@
   "rules": {
     "react/react-in-jsx-scope": "off",
     "@typescript-eslint/strict-boolean-expressions": "off",
-    "@typescript-eslint/no-floating-promises": "off"
+    "@typescript-eslint/no-floating-promises": "off",
+    "@typescript-eslint/restrict-template-expressions": "off",
+    "@typescript-eslint/prefer-ts-expect-error": "off",
+    "@typescript-eslint/ban-ts-comment": "off"
   },
   "ignorePatterns": ["next-env.d.ts", "next.config.js"]
 }
